Implemented validation + image upload
