# src/main/java/ua/shtaiier/phonecontacts/dto/ImageDto.java
@@ -1,0 +1,16 @@
+package ua.shtaiier.phonecontacts.dto;
+
+import lombok.Builder;
+import lombok.Data;
+
+@Data
+@Builder
+public class ImageDto {
+
+    private Integer id;
+    private String originalFileName;
+    private Long size;
+    private String contentType;
+    private byte[] bytes;
+
+}
