# src/main/java/ua/shtaiier/phonecontacts/rest/ContactsApiDelegate.java
@@ -5,7 +5,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import ua.shtaiier.phonecontacts.api.ContactApi;
+import ua.shtaiier.phonecontacts.api.ContactService;
 import ua.shtaiier.phonecontacts.dto.ContactDto;
 
 import java.util.List;
@@ -14,32 +14,22 @@ import java.util.List;
 @RequiredArgsConstructor
 public class ContactsApiDelegate implements ContactsManagementApiDelegate {
 
-    private final ContactApi contactApi;
-
-    @Override
-    public ResponseEntity<ContactDto> addNew(ContactDto contactDto) {
-        return ResponseEntity.ok(contactApi.create(contactDto));
-    }
+    private final ContactService contactService;
 
     @Override
     public ResponseEntity<Void> delete(Integer id) {
-        contactApi.delete(id);
+        contactService.delete(id);
         return new ResponseEntity<>(HttpStatus.NO_CONTENT);
     }
 
     @Override
     public ResponseEntity<ContactDto> get(Integer id) {
-        return ResponseEntity.ok(contactApi.get(id));
+        return ResponseEntity.ok(contactService.get(id));
     }
 
     @Override
     public ResponseEntity<List<ContactDto>> getAll(Integer page, Integer size) {
-        return ResponseEntity.ok(contactApi.getAll(page, size).getContent());
-    }
-
-    @Override
-    public ResponseEntity<ContactDto> update(Integer id, ContactDto contactDto) {
-        return ResponseEntity.ok(contactApi.update(id, contactDto));
+        return ResponseEntity.ok(contactService.getAll(page, size).getContent());
     }
 
 }
